# context-city-codex

./: .gitignore  AGENTS.md  DEMO.md  FEATURE_SOCIAL_FEEDS.md  GRADING.md  README.md  TODO.md  vercel.json
api/: [...route].mjs
apps/mobile/: App.js  app.json  jest.config.js  jest.setup.ts  package.json  tsconfig.json
assets/app.icon/: icon.json
docs/: alignment_foundations.md  backend_integration.md  dartagnan_persona.md  experience_layer_plan.md  live_connection_playbook.md  poi_shortlist.csv  real_time_renderer_proposal.md  timeline_triggers.md  vercel_deploy.md
docs/alignment/: mvp_rollout_scope.md
docs/api/: highlights_contract.md
services/highlights-api/: README.md  package-lock.json  package.json
services/highlights-api/src/: index.js  server.js  server.test.js
services/remotion-pipeline/: README.md  package.json  remotion.config.ts  tsconfig.json
services/remotion-pipeline/examples/: felix-en.json  (+4 more)
services/workers/: README.md  pyproject.toml
services/workers/fixtures/: sample_assets.json
services/workers/src/context_workers/: __init__.py  accessibility.py  cli.py  codexierge.py  extraction.py  filtering.py  models.py  narrative.py  preferences.py  scene_labelling.py  storage.py  summarization.py  translation.py  tts.py  video_assembly.py
services/workers/src/context_workers/api/: __init__.py  preferences_service.py
services/workers/tests/: test_cli.py  test_concierge.py  test_extraction.py  test_filtering.py  test_narrative.py  test_preferences.py  test_preferences_api.py  test_scene_labelling.py  test_storage.py  test_video_assembly.py
(+38 files in other folders)
