[tool.poetry]
name = "context-workers"
version = "0.1.0"
description = "Content Intelligence workers for ContextCity Codex."
authors = ["ContextCity Team <dev@contextcity.example>"]
readme = "README.md"
packages = [{ include = "context_workers", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
google-cloud-storage = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
content-workers = "context_workers.cli:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
